--- a/MVCTool/MVCTool.csproj
+++ b/MVCTool/MVCTool.csproj
@@ -89,6 +89,12 @@
     <Compile Include="frmRouteRuleGenerater.Designer.cs">
       <DependentUpon>frmRouteRuleGenerater.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmValidationStruts2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmValidationStruts2.Designer.cs">
+      <DependentUpon>frmValidationStruts2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmEnumCodeGenerator.resx">
@@ -105,6 +111,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmRouteRuleGenerater.resx">
       <DependentUpon>frmRouteRuleGenerater.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmValidationStruts2.resx">
+      <DependentUpon>frmValidationStruts2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
