--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -61,11 +61,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ModelCodeGenerator.cs">
+    <Compile Include="frmNewProject.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ModelCodeGenerator.Designer.cs">
-      <DependentUpon>ModelCodeGenerator.cs</DependentUpon>
+    <Compile Include="frmNewProject.Designer.cs">
+      <DependentUpon>frmNewProject.cs</DependentUpon>
     </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
@@ -76,8 +76,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemMonitor.cs" />
-    <EmbeddedResource Include="ModelCodeGenerator.resx">
-      <DependentUpon>ModelCodeGenerator.cs</DependentUpon>
+    <EmbeddedResource Include="frmNewProject.resx">
+      <DependentUpon>frmNewProject.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
