--- a/MVCTool/MVCTool.csproj
+++ b/MVCTool/MVCTool.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -31,9 +31,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
@@ -50,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Class\DataBase\GenerateMySqlDDL.cs" />
     <Compile Include="Class\Enum\EnumGenerator.cs" />
+    <Compile Include="Class\Model\ModelCodeGeneratorJavaJFinal.cs" />
     <Compile Include="Class\Model\ValidationStruts2.cs" />
     <Compile Include="Class\Model\ViewerGenerator.cs" />
     <Compile Include="Class\Model\ModelCodeGeneratorJavaSpring.cs" />
@@ -139,7 +137,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
-      <Project>{a560bcbd-d784-4832-b98d-d38bb85f4f09}</Project>
+      <Project>{A560BCBD-D784-4832-B98D-D38BB85F4F09}</Project>
       <Name>Common</Name>
     </ProjectReference>
   </ItemGroup>
